--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.16",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "qrcode.react": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
