--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "otpauth": "^9.3.4",
     "qrcode.react": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
